force-app/main/default/objects/webm__Webmerge_Document__c/webm__Webmerge_Document__c.object-meta.xml
<CustomObject>
    <label>Webmerge Document</label>
    <nameField>
        <displayFormat>wm{0000000}</displayFormat>
        <label>Webmerge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Webmerge Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>