force-app/main/default/objects/webm__Webmerge_Document__c/fields/webm__Account__c.field-meta.xml
<CustomField>
    <fullName>webm__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Webmerge Documents</relationshipLabel>
    <relationshipName>Webmerge_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>