force-app/main/default/objects/webm__Webmerge_Document__c/fields/webm__Batch_Order__c.field-meta.xml
<CustomField>
    <fullName>webm__Batch_Order__c</fullName>
    <label>Batch Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>