force-app/main/default/objects/webm__Webmerge_Document__c/fields/webm__Batch_Settings__c.field-meta.xml
<CustomField>
    <fullName>webm__Batch_Settings__c</fullName>
    <label>Batch Settings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>