force-app/main/default/objects/webm__Webmerge_Document__c/fields/webm__Case__c.field-meta.xml
<CustomField>
    <fullName>webm__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Webmerge Documents</relationshipLabel>
    <relationshipName>Webmerge_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>