force-app/main/default/objects/webm__Webmerge_Document__c/fields/webm__Contact__c.field-meta.xml
<CustomField>
    <fullName>webm__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Webmerge Documents</relationshipLabel>
    <relationshipName>Webmerge_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>