force-app/main/default/objects/webm__Webmerge_Document__c/fields/webm__Field_Values__c.field-meta.xml
<CustomField>
    <fullName>webm__Field_Values__c</fullName>
    <label>Field Values</label>
    <length>65000</length>
    <type>LongTextArea</type>
</CustomField>