force-app/main/default/objects/webm__Webmerge_Document__c/fields/webm__Lead__c.field-meta.xml
<CustomField>
    <fullName>webm__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Webmerge Documents</relationshipLabel>
    <relationshipName>Webmerge_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>