force-app/main/default/objects/webm__Webmerge_Document__c/fields/webm__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>webm__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Webmerge Documents</relationshipLabel>
    <relationshipName>Webmerge_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>