force-app/main/default/objects/webm__Webmerge_Document__c/fields/webm__Record_ID__c.field-meta.xml
<CustomField>
    <fullName>webm__Record_ID__c</fullName>
    <label>Salesforce Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>