force-app/main/default/objects/webm__Webmerge_Document__c/fields/webm__Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>webm__Status_Reason__c</fullName>
    <label>Status Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>