force-app/main/default/objects/webm__Webmerge_Document__c/fields/webm__Webmerge_Mapping__c.field-meta.xml
<CustomField>
    <fullName>webm__Webmerge_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Webmerge Mapping</label>
    <referenceTo>webm__Webmerge_Mapping__c</referenceTo>
    <relationshipLabel>Webmerge Documents</relationshipLabel>
    <relationshipName>Webmerge_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>