force-app/main/default/objects/webm__Webmerge_Document__c/fields/webm__Webmerge_Status__c.field-meta.xml
<CustomField>
    <fullName>webm__Webmerge_Status__c</fullName>
    <label>Webmerge Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>